--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <p>
     Lii mooy Cours Github
   </p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non nulla ut distinctio dicta reiciendis laborum nesciunt
+    qui sunt quisquam inventore pariatur at harum neque, tempore molestiae accusantium eligendi quam odit.</p>
 </body>
 
 </html>
